button text modified

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img src="./assests/blackdot.svg" alt="">
           </div>
         </div>
-        <button class="action-btn btn-last">Add to chart</button>
+        <button class="action-btn btn-last">Add to cart</button>
       </div>
     </div>
     <div class="news-letter">
